assets/css/core/theme-vars.css
:root {
    --gap: 24px;
    --content-gap: 20px;
    --nav-width: 1024px;
    --main-width: 720px;
    --header-height: 44px;
    --footer-height: 70px;
    --radius: 8px;
    --theme: rgb(255, 255, 255);
    --entry: rgb(255, 255, 255);
    --primary: rgb(30, 30, 30);
    --secondary: rgb(108, 108, 108);
    --tertiary: rgb(214, 214, 214);
    --gray: rgb(165, 165, 165);
    --content: rgb(30, 30, 30);
    --code-block-bg: rgb(28, 29, 33);
    --code-bg: rgb(245, 245, 245);
    --border: rgb(238, 238, 238);
    --darkcolor: #a30651;
    --lightcolor: rgba(163, 6, 81, 0.6);
    --semibold: 500;
    --homesize: 16px;
    --textsize: 18px;
    --h1size: 25px;
    --entrysize: 15px;
    --headersize: 16px;
    --footersize: 13px;
    --lineheight: 1.45;
    --lineclamp: 8;
    --marginleft: 26px;
}

.dark {
    --theme: rgb(29, 30, 32);
    --entry: rgb(46, 46, 51);
    --primary: rgb(218, 218, 219);
    --secondary: rgb(155, 156, 157);
    --tertiary: rgb(65, 66, 68);
    --content: rgb(196, 196, 197);
    --code-block-bg: rgb(46, 46, 51);
    --code-bg: rgb(55, 56, 62);
    --border: rgb(51, 51, 51);
}

.list {
    background: var(--code-bg);
}

.dark.list {
    background: var(--theme);
}

